oh god why did maot make the dropdowns overflow: hidden, fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -151,7 +151,6 @@ input[type=text], select {
   
 .dropdown {
     float: left;
-    overflow: hidden;
   }
   
   .dropdown .dropbtn {
